<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ArielCast</string>
    <string name="arielcast2" tools:ignore="DuplicateDefinition">ArielCast</string>
    <string name="email_address">Email Address</string>
    <string name="password1" tools:ignore="DuplicateDefinition">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email1">Email</string>
    <string name="phone1">Phone</string>
    <string name="welcome">Welcome!</string>
    <string name="textView">TextView</string>
    <string name="i_m_lecturer">I\'m lecturer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="arielcast" />
    <string name="full_name" />
    <string name="password" />
    <string name="phone" />
    <string name="email" />
    <string name="register" />
    <string name="title_activity_lecturer" />
    <string name="credits">Credits</string>
    <string name="button">Button</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="course_name">Course Name</string>
    <string name="main_title">Main Title</string>
    <string name="todo1">TODO</string>
    <string name="sub_title">Sub Title</string>
    <string name="lecture_name">lecture_name</string>
    <string name="login_password">login_password</string>
    <string name="logout">logout</string>
    <string name="search_course">Search Course</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="watch_later_playlist">Watch Later Playlist</string>
    <string name="my_courses">My Courses</string>
    <string name="title_activity_phonebook">PhonebookActivity</string>
    <string name="arielcastlogo">ArielCast</string>
    <string name="passwordval">password</string>
    <string name="registerbutton">register</string>
    <string name="phone_book">Phone Book</string>
    <string name="contact_us">Contact Us</string>
    <string name="remember_me">Remember me</string>
    <string name="todo2">TODO</string>
    <string name="arielcastlogo1">ArielCast</string>
    <string name="delete_this_course">delete this course</string>
    <string name="cancel_" tools:ignore="ButtonCase">cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_course">Are you sure you want to delete this course ?</string>
    <string name="update_course_image">update course image</string>
    <string name="end_date_update">End Date</string>
    <string name="start_date_update">Start Date</string>
    <string name="coursename_update">courseName</string>
    <string name="cancel1">@android:string/cancel</string>
    <string name="edit_course_b">Edit Course</string>
    <string name="arielcast_update_di">ArielCast</string>
    <string name="todo">TODO</string>
    <string name="about_us">About us</string>
    <string name="comments">Comments \t\t\t | \t\t\t 0 </string>

</resources>