<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_banner_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:contentDescription="@string/arielcast_update_di"
        app:srcCompat="@mipmap/ic_bannerlogo222_foreground"
        tools:srcCompat="@mipmap/ic_bannerlogo222_foreground"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="512dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/insertNewCourseName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/coursename_update"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/start_date_update"
            android:inputType="date"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="@string/end_date_update"
            android:inputType="date"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="175dp"
                android:layout_height="104dp"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:srcCompat="@drawable/ariel_logo"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/updateCourseImage"
                android:layout_width="145dp"
                android:layout_height="78dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="25dp"
                android:text="@string/update_course_image"
                android:theme="@style/myButtonTheme" />

        </LinearLayout>

        <Button
            android:id="@+id/continueb"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="#6A6868"
            android:text="@string/edit_course_b"
            android:theme="@style/myButtonTheme" />

        <Button
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel1"
            android:theme="@style/myButtonTheme" />


    </LinearLayout>
</LinearLayout>