<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capture"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_show_lecture_scene"
    tools:context=".AddLectureActivity">

    <VideoView
        android:id="@+id/lecture_view"
        android:layout_width="412dp"
        android:layout_height="234dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/et_video_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/arielcast"
        android:backgroundTint="@color/design_default_color_background"
        android:hint="@string/lecture_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSub_lecName"
        app:layout_constraintEnd_toStartOf="@+id/add_to_watch_later_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecture_view"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textViewSub_lecName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sub_title"
        android:textColor="#a9a9a9"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewSub_date"
        app:layout_constraintEnd_toEndOf="@+id/et_video_name"
        app:layout_constraintTop_toBottomOf="@+id/et_video_name" />

    <ImageButton
        android:id="@+id/add_to_watch_later_list"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSub_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_video_name"
        app:layout_constraintTop_toBottomOf="@+id/lecture_view"
        app:srcCompat="@drawable/capture1212" />

    <TextView
        android:id="@+id/textViewSub_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/sub_title"
        android:textColor="#a9a9a9"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="@+id/textViewSub_lecName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSub_lecName" />

    <ImageButton
        android:id="@+id/editButton5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="274dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deleteButton" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="296dp"
        android:background="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editButton5"
        app:layout_constraintTop_toBottomOf="@+id/textViewSub_date" />


</androidx.constraintlayout.widget.ConstraintLayout>