<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/capture"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/lecture_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ariel_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="701dp">

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="174dp"
            android:text="@string/main_title"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/sub_title"
            android:textColor="#a9a9a9"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editButton5"
            app:layout_constraintEnd_toEndOf="@+id/textViewMain"
            app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/watch_later_recycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editButton5" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="onfabClick"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteButton5"
            app:layout_constraintVertical_bias="0.977"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/editButton5"
            android:layout_width="110dp"
            android:layout_height="33dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="12dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/watch_later_recycleView"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSub"
            app:srcCompat="@drawable/edit_button" />

        <ImageButton
            android:id="@+id/deleteButton5"
            android:layout_width="110dp"
            android:layout_height="33dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="601dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/delete_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="322dp"
            android:text="There are no lectures in this course yet"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>