<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/capture"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="261dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="ArielCast"
        android:textAlignment="center"
        android:textColor="#2D2F31"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="325dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClick"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:strokeColor="#3949AB"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/setNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/signIn"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="register"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/signIn"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="198dp"
        android:layout_height="204dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@mipmap/ic_bannerlogo_foreground"
        tools:srcCompat="@mipmap/ic_bannerlogo_foreground" />

    <TextView
        android:id="@+id/phoneBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="Phone Book"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contact" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:text="Contact Us"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="350dp"
        android:buttonTint="#303F9F"
        android:text="Remember me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>